--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
-<title></title>
-<link rel="stylesheet" href="/bundle.css" />
-<main></main>
-<script src="/bundle.js"></script>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Heebo:wght@700;800;900&family=Open+Sans&display=swap"
+            rel="stylesheet"
+        />
+        <link rel="stylesheet" href="/bundle.css" />
+        <title>Document</title>
+    </head>
+    <body>
+        <main class="main"></main>
+        <script src="/bundle.js"></script>
+    </body>
+</html>
