--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="/bundle.css" />
-        <title>Document</title>
+        <title>2D-Friends</title>
     </head>
     <body>
         <main class="main"></main>
